[project]
name = "debugging-q4"
version = "0.1.0"
description = "CCHC Assessment Debugging Q4"
authors = [{ name = "Sean Anderson", email = "sean.317@live.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.0.4",
    "pandas>=2.2.3",
    "numpy",
    "Flask>=2.3.2",
    ]
